--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Micrium_LPC1768-SK_uCOS-III-Release/Software/EvalBoards/NXP/LPC1768-SK/uCOS-III/
 Micrium_LPC1768-SK_uCOS-III-Release/Software/EvalBoards/NXP/LPC1768-SK/uCOS-III/IAR/*.dep
 Micrium_LPC1768-SK_uCOS-III-Release/Software/EvalBoards/NXP/LPC1768-SK/uCOS-III/IAR/*.ewt
 Micrium_LPC1768-SK_uCOS-III-Release/Software/EvalBoards/NXP/LPC1768-SK/uCOS-III/IAR/InputData.txt
+Micrium_LPC1768-SK_uCOS-III-Release/Software/EvalBoards/NXP/LPC1768-SK/LPC17XXCMSIS/Core/CM3/Example/
